...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--RecordSoundViewController-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="RecordSoundViewController" title="RecordSoundViewController" id="BYZ-38-t0r" customClass="RecordSoundViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="140" id="Nte-ll-4XV"/>
                                            <constraint firstAttribute="height" constant="140" id="jzw-m8-8sD"/>
                                        </constraints>
                                        <state key="normal" image="Record"/>
                                        <connections>
                                            <action selector="recordVoice:" destination="BYZ-38-t0r" eventType="touchUpInside" id="s3n-zU-yjG"/>
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to Record" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kZs-s2-7Xv">
                                        <rect key="frame" x="16.5" y="140" width="107" height="30"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="YMt-RY-VmF"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
...
            </objects>
            <point key="canvasLocation" x="495.19999999999999" y="123.68815592203899"/>
        </scene>
        <!--ChangeVoiceViewController-->
        <scene sceneID="4xc-3Y-J2g">
            <objects>
                <viewController storyboardIdentifier="ChangeVoiceViewController" title="ChangeVoiceViewController" id="lkF-Ju-kJV" customClass="ChangeVoiceViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="OW8-Qu-rRA"/>
                        <viewControllerLayoutGuide type="bottom" id="pVQ-rn-aVy"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="5TG-xG-BeL">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                                    </button>
                                                </subviews>
                                            </stackView>
                                            <stackView opaque="NO" contentMode="scaleAspectFit" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="IVW-Kq-1Tu">
                                                <rect key="frame" x="0.0" y="359.5" width="335" height="179.5"/>
                                                <subviews>
                                                    <button opaque="NO" clipsSubviews="YES" tag="5" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oJU-OI-sdO" userLabel="Echo">
                                                        <rect key="frame" x="0.0" y="0.0" width="167.5" height="179.5"/>
                                                        <state key="normal" image="Echo"/>
                                                        <connections>
                                                            <action selector="playSoundForButton:" destination="lkF-Ju-kJV" eventType="touchUpInside" id="Eo1-Q4-TwD"/>
                                                        </connections>
                                                    </button>
...
