...
    @IBOutlet weak var startRecordingButton: UIButton!
    var audioRecorder: AVAudioRecorder!

    // MARK: - METHODS
    
    @IBAction func recordVoice(_ sender: Any) {
        lblRecordingLabel.text = "Recording in Progress"
        handleButtonRecordState(false)
        let dirPath = NSSearchPathForDirectoriesInDomains(.documentDirectory, .userDomainMask, true)[0] as String
        let fileName = "recordVoice.wav"
        let pathArray = [dirPath, fileName]
        let filePath = URL(string: pathArray.joined(separator: "/"))
        print(filePath!)
...
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        // Do any additional setup after loading the view, typically from a nib.
        stopRecordingButton.isEnabled = false
        stopRecordingButton.accessibilityIdentifier = "Stop1"
    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        self.navigationController?.navigationBar.accessibilityIdentifier = NSStringFromClass(RecordSoundViewController.self).components(separatedBy: ".").last!
    }
...
